--- a/style.css
+++ b/style.css
@@ -1,14 +1,25 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
     text-align: center;
-    padding: 20px;
+    /* padding: 20px; */
 }
-
+h2{
+    margin-top: 5rem;
+    margin-bottom: 1rem;
+}
 h2, h3 {
     color: #333;
 }
-
+h3{
+    margin: 1rem 0;
+}
 textarea {
     width: 80%;
     max-width: 400px;
@@ -47,4 +58,27 @@ pre {
     white-space: pre-wrap;
     border-radius: 5px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    height: auto;
+    margin-bottom: 7rem;
+}
+
+footer{
+    background: white;
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 4rem;
+    margin-top: 2rem;
+    position: absolute;
+    bottom: -1;
+}
+.box{
+    text-align: left;
+}
+
+a{
+    text-decoration: none;
+    color: black;
 }
