--- a/style.css
+++ b/style.css
@@ -71,8 +71,9 @@ footer{
     width: 100%;
     height: 4rem;
     margin-top: 2rem;
-    position: absolute;
-    bottom: -1;
+    position: fixed;
+    bottom: 0;
+    left: 0;
 }
 .box{
     text-align: left;
